haggle/src/libhaggle/include/libhaggle/ipc.h

/**
	The types of events that can be registered.
*/
typedef enum event_type {
	// Shutdown event: haggle is shutting down.
	LIBHAGGLE_EVENT_SHUTDOWN = 0,
	// Neighbor update event.
	LIBHAGGLE_EVENT_NEIGHBOR_UPDATE,
	// New data object event.
	LIBHAGGLE_EVENT_NEW_DATAOBJECT,
	// Interest list
	LIBHAGGLE_EVENT_INTEREST_LIST,
	// Interests Policy list // IRD, HK
	LIBHAGGLE_EVENT_INTERESTS_POLICIES_LIST, // IRD, HK
	// The number of possible events
	_LIBHAGGLE_NUM_EVENTS
} haggle_event_type_t;
	
typedef struct event {
	haggle_event_type_t type;
	union {
		struct dataobject *dobj;
		struct attributelist *interests;
		struct attributelist *interests_policies; // IRD, HK
		struct nodelist *neighbors;
		unsigned int shutdown_reason;
	};
} haggle_event_t;
	
enum daemon_status {
	HAGGLE_DAEMON_ERROR = HAGGLE_ERROR,
	HAGGLE_DAEMON_NOT_RUNNING = HAGGLE_NO_ERROR,
	HAGGLE_DAEMON_RUNNING = 1,
	HAGGLE_DAEMON_CRASHED = 2
};
typedef struct haggle_handle *haggle_handle_t;
/**
	A haggle event handler. 
	
	An event contains a type and auxiliary data that depends on the event type.
	The auxiliary data will automatically be freed after the execution of the
	event handler. In case the handling application wants to keep, e.g., a
	data object, then the data pointer should be nullified, or the return value
	be 1.
*/
typedef int (STDCALL *haggle_event_handler_t) (haggle_event_t *, void *);
/**

*/
typedef void (STDCALL *haggle_event_loop_start_t) (void *);
typedef void (STDCALL *haggle_event_loop_stop_t) (void *);
/* 
Callback for providing feedback during spawning of Haggle. The unsigned integer passed is the 
total number of milliseconds that have passed since spawning was initiated. The value will be
zero once the daemon has been spawned, and the callback will not be called again.

The return value of the callback can be used to cancel the spawning. Return -1 to cancel, 
any other value will continue the operation.
*/
typedef int (STDCALL *daemon_spawn_callback_t) (unsigned int);
	
typedef enum control_type {
	CTRL_TYPE_INVALID = -1,
	CTRL_TYPE_REGISTRATION_REQUEST = 0,
	CTRL_TYPE_REGISTRATION_REPLY,
	CTRL_TYPE_DEREGISTRATION_NOTICE,
	CTRL_TYPE_REGISTER_INTEREST,
	CTRL_TYPE_REMOVE_INTEREST,
	CTRL_TYPE_GET_INTERESTS,
	CTRL_TYPE_REGISTER_EVENT_INTEREST,
	CTRL_TYPE_MATCHING_DATAOBJECT,
	CTRL_TYPE_DELETE_DATAOBJECT,
	CTRL_TYPE_GET_DATAOBJECTS,
	CTRL_TYPE_SEND_NODE_DESCRIPTION,
	CTRL_TYPE_SHUTDOWN,
	CTRL_TYPE_EVENT,
	CTRL_TYPE_SET_PARAM,
	CTRL_TYPE_CONFIGURE_SECURITY, // CBMEN, HL
	CTRL_TYPE_DYNAMIC_CONFIGURE,
	CTRL_TYPE_GET_INTERESTS_POLICIES, // IRD, HK
} control_type_t;
/* IPC API functions */

/**
   \defgroup IPC Inter Process Communication 

	GENERAL NOTES:

	Most IPC functions return a value indicating success or failure. This value only 
	indicates if the operation was successful within "libhaggle" -- it does not say
	anything about the success of the operation in the Haggle daemon.

	Some operations will trigger a response from Haggle in the form of a control 
	data object. In that case, the application will be notified asynchronously through
	its event handlers. Any success of failure of the operations previously initiated
	may be indicated in those messages.
*/

/*@{*/

/**
	Returns (if possible) a handle that can be used to communicate with haggle
	given a unique application name.
	
	Fills in the given haggle handle iff successful. Otherwise leaves the handle
	unmodified.

	@returns zero if successful, or an error code.
	
	Some specific error codes:
		HAGGLE_REGISTRATION_ERROR - Unable to establish contact with haggle
		HAGGLE_BUSY_ERROR - Haggle reported that there was already an 
			application with that name.
*/

HAGGLE_API int haggle_handle_get(const char *name, haggle_handle_t *handle);
/**
	Relinquishes a handle used to communicate with haggle.
	
	The handle will be invalid after calling this function.
*/
HAGGLE_API void haggle_handle_free(haggle_handle_t hh);
/**
	This function returns the Process ID (PID) of a running
        Haggle daemon.
	
	@param the pid to return, or NULL if caller does not care.
	@returns HAGGLE_DAEMON_NOT_RUNNING (HAGGLE_NO_ERROR) if Haggle is 
	not running and previously exited cleanly, HAGGLE_DAEMON_CRASHED if 
	Haggle exited uncleanly (crashed)), HAGGLE_DAEMON_RUNNING if 
	Haggle is running, or HAGGLE_DAEMON_ERROR if the function call failed.
*/
HAGGLE_API int haggle_daemon_pid(unsigned long *pid);
/**
	This function can be used by an application to spawn a new
        Haggle daemon, if none was already running.
	
        @param daemonpath The path to the Haggle daemon executable, or
        NULL if libhaggle should try standard paths.

	@returns HAGGLE_NO_ERROR if a haggle daemon is already running, 1 if a daemon 
        was spawned and HAGGLE_ERROR if an error occured.
*/
HAGGLE_API int haggle_daemon_spawn(const char *daemonpath);
HAGGLE_API int haggle_daemon_spawn_with_callback(const char *daemonpath, daemon_spawn_callback_t callback);
/**
	This function can be used by an application to remove any previous 
	registration by a same-named application from haggle.
	
	PLEASE USE ONLY WHEN ABSOLUTELY CERTAIN THAT THERE IS NO OTHER APPLICATION.
	
        @param name the name of the application to unregister
	@returns an error code.
*/
HAGGLE_API int haggle_unregister(const char *name);
/**
	Get the session Id associated with the handle. 
	A valid handle has a positive session id.
*/
HAGGLE_API int haggle_handle_get_session_id(haggle_handle_t hh);
/**
	Publishes a data object into haggle.
	
	This function does not take possession of the data object.
	
	@returns an error code.
*/
HAGGLE_API int haggle_ipc_publish_dataobject(haggle_handle_t hh, struct dataobject *dobj);
/**
	Register interest in an event type. See event types above for the different
	event types that can be registered.
	
	If this data object matches any interest of this application, a copy of the
	data object will be given to the registered event handler.
	
	@returns an error code.
*/
HAGGLE_API int STDCALL haggle_ipc_register_event_interest(haggle_handle_t hh, const int eventId, haggle_event_handler_t handler);