haggle/src/apps/filegenerate/haggle.py


# /usr/local/include/libhaggle/node.h: 56
if hasattr(_libs['haggle'], 'haggle_node_free'):
    haggle_node_free = _libs['haggle'].haggle_node_free
    haggle_node_free.argtypes = [POINTER(struct_node)]
    haggle_node_free.restype = None

# /usr/local/include/libhaggle/node.h: 58
if hasattr(_libs['haggle'], 'haggle_node_get_name'):
    haggle_node_get_name = _libs['haggle'].haggle_node_get_name
    haggle_node_get_name.argtypes = [POINTER(struct_node)]
    if sizeof(c_int) == sizeof(c_void_p):
        haggle_node_get_name.restype = ReturnString
    else:
        haggle_node_get_name.restype = String
        haggle_node_get_name.errcheck = ReturnString

# /usr/local/include/libhaggle/node.h: 60
if hasattr(_libs['haggle'], 'haggle_node_get_num_interfaces'):
    haggle_node_get_num_interfaces = _libs['haggle'].haggle_node_get_num_interfaces
    haggle_node_get_num_interfaces.argtypes = [POINTER(struct_node)]
    haggle_node_get_num_interfaces.restype = c_int

# /usr/local/include/libhaggle/node.h: 63
if hasattr(_libs['haggle'], 'haggle_node_get_interface_n'):
    haggle_node_get_interface_n = _libs['haggle'].haggle_node_get_interface_n
    haggle_node_get_interface_n.argtypes = [POINTER(struct_node), c_int]
    haggle_node_get_interface_n.restype = POINTER(haggle_interface_t)

# /usr/local/include/libhaggle/node.h: 73
if hasattr(_libs['haggle'], 'haggle_node_add_attribute'):
    haggle_node_add_attribute = _libs['haggle'].haggle_node_add_attribute
    haggle_node_add_attribute.argtypes = [POINTER(struct_node), String, String]
    haggle_node_add_attribute.restype = c_int

# /usr/local/include/libhaggle/node.h: 82
if hasattr(_libs['haggle'], 'haggle_node_add_attribute_weighted'):
    haggle_node_add_attribute_weighted = _libs['haggle'].haggle_node_add_attribute_weighted
    haggle_node_add_attribute_weighted.argtypes = [POINTER(struct_node), String, String, c_ulong]
    haggle_node_add_attribute_weighted.restype = c_int

# /usr/local/include/libhaggle/node.h: 90
if hasattr(_libs['haggle'], 'haggle_node_get_num_attributes'):
    haggle_node_get_num_attributes = _libs['haggle'].haggle_node_get_num_attributes
    haggle_node_get_num_attributes.argtypes = [POINTER(struct_node)]
    haggle_node_get_num_attributes.restype = c_int

# /usr/local/include/libhaggle/node.h: 100
if hasattr(_libs['haggle'], 'haggle_node_get_attribute_n'):
    haggle_node_get_attribute_n = _libs['haggle'].haggle_node_get_attribute_n
    haggle_node_get_attribute_n.argtypes = [POINTER(struct_node), c_int]
    haggle_node_get_attribute_n.restype = POINTER(struct_attribute)

# /usr/local/include/libhaggle/node.h: 110
if hasattr(_libs['haggle'], 'haggle_node_get_attribute_by_name'):
    haggle_node_get_attribute_by_name = _libs['haggle'].haggle_node_get_attribute_by_name
    haggle_node_get_attribute_by_name.argtypes = [POINTER(struct_node), String]
    haggle_node_get_attribute_by_name.restype = POINTER(struct_attribute)

# /usr/local/include/libhaggle/node.h: 120
if hasattr(_libs['haggle'], 'haggle_node_get_attribute_by_name_n'):
    haggle_node_get_attribute_by_name_n = _libs['haggle'].haggle_node_get_attribute_by_name_n
    haggle_node_get_attribute_by_name_n.argtypes = [POINTER(struct_node), String, c_int]
    haggle_node_get_attribute_by_name_n.restype = POINTER(struct_attribute)

# /usr/local/include/libhaggle/node.h: 130
if hasattr(_libs['haggle'], 'haggle_node_get_attribute_by_name_value'):
    haggle_node_get_attribute_by_name_value = _libs['haggle'].haggle_node_get_attribute_by_name_value
    haggle_node_get_attribute_by_name_value.argtypes = [POINTER(struct_node), String, String]
    haggle_node_get_attribute_by_name_value.restype = POINTER(struct_attribute)

# /usr/local/include/libhaggle/node.h: 155
class struct_nodelist(Structure):
    pass

struct_nodelist.__slots__ = [
    'nodes',
    'num_nodes',
]
struct_nodelist._fields_ = [
    ('nodes', list_t),
    ('num_nodes', c_int),
]

haggle_nodelist_t = struct_nodelist # /usr/local/include/libhaggle/node.h: 155

# /usr/local/include/libhaggle/node.h: 157
if hasattr(_libs['haggle'], 'haggle_nodelist_new_from_metadata'):
    haggle_nodelist_new_from_metadata = _libs['haggle'].haggle_nodelist_new_from_metadata
    haggle_nodelist_new_from_metadata.argtypes = [POINTER(struct_metadata)]
    haggle_nodelist_new_from_metadata.restype = POINTER(haggle_nodelist_t)

# /usr/local/include/libhaggle/node.h: 158
if hasattr(_libs['haggle'], 'haggle_nodelist_get_node_n'):
    haggle_nodelist_get_node_n = _libs['haggle'].haggle_nodelist_get_node_n
    haggle_nodelist_get_node_n.argtypes = [POINTER(haggle_nodelist_t), c_int]
    haggle_nodelist_get_node_n.restype = POINTER(struct_node)

# /usr/local/include/libhaggle/node.h: 160
if hasattr(_libs['haggle'], 'haggle_nodelist_pop'):
    haggle_nodelist_pop = _libs['haggle'].haggle_nodelist_pop
    haggle_nodelist_pop.argtypes = [POINTER(haggle_nodelist_t)]
    haggle_nodelist_pop.restype = POINTER(struct_node)

# /usr/local/include/libhaggle/node.h: 162
if hasattr(_libs['haggle'], 'haggle_nodelist_size'):
    haggle_nodelist_size = _libs['haggle'].haggle_nodelist_size
    haggle_nodelist_size.argtypes = [POINTER(haggle_nodelist_t)]
    haggle_nodelist_size.restype = c_int

# /usr/local/include/libhaggle/node.h: 164
if hasattr(_libs['haggle'], 'haggle_nodelist_free'):
    haggle_nodelist_free = _libs['haggle'].haggle_nodelist_free
    haggle_nodelist_free.argtypes = [POINTER(haggle_nodelist_t)]
    haggle_nodelist_free.restype = None

enum_event_type = c_int # /usr/local/include/libhaggle/ipc.h: 40

LIBHAGGLE_EVENT_SHUTDOWN = 0 # /usr/local/include/libhaggle/ipc.h: 40

LIBHAGGLE_EVENT_NEIGHBOR_UPDATE = (LIBHAGGLE_EVENT_SHUTDOWN + 1) # /usr/local/include/libhaggle/ipc.h: 40

LIBHAGGLE_EVENT_NEW_DATAOBJECT = (LIBHAGGLE_EVENT_NEIGHBOR_UPDATE + 1) # /usr/local/include/libhaggle/ipc.h: 40

LIBHAGGLE_EVENT_INTEREST_LIST = (LIBHAGGLE_EVENT_NEW_DATAOBJECT + 1) # /usr/local/include/libhaggle/ipc.h: 40

_LIBHAGGLE_NUM_EVENTS = (LIBHAGGLE_EVENT_INTEREST_LIST + 1) # /usr/local/include/libhaggle/ipc.h: 40

haggle_event_type_t = enum_event_type # /usr/local/include/libhaggle/ipc.h: 40

# /usr/local/include/libhaggle/ipc.h: 44
class union_anon_25(Union):
    pass

union_anon_25.__slots__ = [
    'dobj',
    'interests',
    'neighbors',
    'shutdown_reason',
]
union_anon_25._fields_ = [
    ('dobj', POINTER(struct_dataobject)),
    ('interests', POINTER(struct_attributelist)),
    ('neighbors', POINTER(struct_nodelist)),
    ('shutdown_reason', c_uint),
]

# /usr/local/include/libhaggle/ipc.h: 50
class struct_event(Structure):
    pass

struct_event.__slots__ = [
    'type',
    'unnamed_1',
]
struct_event._anonymous_ = [
    'unnamed_1',
]
struct_event._fields_ = [
    ('type', haggle_event_type_t),
    ('unnamed_1', union_anon_25),
]

haggle_event_t = struct_event # /usr/local/include/libhaggle/ipc.h: 50

enum_daemon_status = c_int # /usr/local/include/libhaggle/ipc.h: 52

HAGGLE_DAEMON_ERROR = HAGGLE_ERROR # /usr/local/include/libhaggle/ipc.h: 52

HAGGLE_DAEMON_NOT_RUNNING = HAGGLE_NO_ERROR # /usr/local/include/libhaggle/ipc.h: 52

HAGGLE_DAEMON_RUNNING = 1 # /usr/local/include/libhaggle/ipc.h: 52

HAGGLE_DAEMON_CRASHED = 2 # /usr/local/include/libhaggle/ipc.h: 52

# /usr/local/include/libhaggle/ipc.h: 59
class struct_haggle_handle(Structure):
    pass

haggle_handle_t = POINTER(struct_haggle_handle) # /usr/local/include/libhaggle/ipc.h: 59

haggle_event_handler_t = CFUNCTYPE(UNCHECKED(c_int), POINTER(haggle_event_t), POINTER(None)) # /usr/local/include/libhaggle/ipc.h: 76

haggle_event_loop_start_t = CFUNCTYPE(UNCHECKED(None), POINTER(None)) # /usr/local/include/libhaggle/ipc.h: 80

haggle_event_loop_stop_t = CFUNCTYPE(UNCHECKED(None), POINTER(None)) # /usr/local/include/libhaggle/ipc.h: 81

daemon_spawn_callback_t = CFUNCTYPE(UNCHECKED(c_int), c_uint) # /usr/local/include/libhaggle/ipc.h: 91

enum_control_type = c_int # /usr/local/include/libhaggle/ipc.h: 112

CTRL_TYPE_INVALID = (-1) # /usr/local/include/libhaggle/ipc.h: 112

CTRL_TYPE_REGISTRATION_REQUEST = 0 # /usr/local/include/libhaggle/ipc.h: 112

CTRL_TYPE_REGISTRATION_REPLY = (CTRL_TYPE_REGISTRATION_REQUEST + 1) # /usr/local/include/libhaggle/ipc.h: 112

CTRL_TYPE_DEREGISTRATION_NOTICE = (CTRL_TYPE_REGISTRATION_REPLY + 1) # /usr/local/include/libhaggle/ipc.h: 112

CTRL_TYPE_REGISTER_INTEREST = (CTRL_TYPE_DEREGISTRATION_NOTICE + 1) # /usr/local/include/libhaggle/ipc.h: 112

CTRL_TYPE_REMOVE_INTEREST = (CTRL_TYPE_REGISTER_INTEREST + 1) # /usr/local/include/libhaggle/ipc.h: 112

CTRL_TYPE_GET_INTERESTS = (CTRL_TYPE_REMOVE_INTEREST + 1) # /usr/local/include/libhaggle/ipc.h: 112

CTRL_TYPE_REGISTER_EVENT_INTEREST = (CTRL_TYPE_GET_INTERESTS + 1) # /usr/local/include/libhaggle/ipc.h: 112

CTRL_TYPE_MATCHING_DATAOBJECT = (CTRL_TYPE_REGISTER_EVENT_INTEREST + 1) # /usr/local/include/libhaggle/ipc.h: 112

CTRL_TYPE_DELETE_DATAOBJECT = (CTRL_TYPE_MATCHING_DATAOBJECT + 1) # /usr/local/include/libhaggle/ipc.h: 112

CTRL_TYPE_GET_DATAOBJECTS = (CTRL_TYPE_DELETE_DATAOBJECT + 1) # /usr/local/include/libhaggle/ipc.h: 112

CTRL_TYPE_SEND_NODE_DESCRIPTION = (CTRL_TYPE_GET_DATAOBJECTS + 1) # /usr/local/include/libhaggle/ipc.h: 112

CTRL_TYPE_SHUTDOWN = (CTRL_TYPE_SEND_NODE_DESCRIPTION + 1) # /usr/local/include/libhaggle/ipc.h: 112

CTRL_TYPE_EVENT = (CTRL_TYPE_SHUTDOWN + 1) # /usr/local/include/libhaggle/ipc.h: 112

control_type_t = enum_control_type # /usr/local/include/libhaggle/ipc.h: 112

# /usr/local/include/libhaggle/ipc.h: 176
if hasattr(_libs['haggle'], 'haggle_handle_get'):
    haggle_handle_get = _libs['haggle'].haggle_handle_get
    haggle_handle_get.argtypes = [String, POINTER(haggle_handle_t)]
    haggle_handle_get.restype = c_int

# /usr/local/include/libhaggle/ipc.h: 183
if hasattr(_libs['haggle'], 'haggle_handle_free'):
    haggle_handle_free = _libs['haggle'].haggle_handle_free
    haggle_handle_free.argtypes = [haggle_handle_t]
    haggle_handle_free.restype = None

# /usr/local/include/libhaggle/ipc.h: 195
if hasattr(_libs['haggle'], 'haggle_daemon_pid'):
    haggle_daemon_pid = _libs['haggle'].haggle_daemon_pid
    haggle_daemon_pid.argtypes = [POINTER(c_ulong)]
    haggle_daemon_pid.restype = c_int

# /usr/local/include/libhaggle/ipc.h: 207
if hasattr(_libs['haggle'], 'haggle_daemon_spawn'):
    haggle_daemon_spawn = _libs['haggle'].haggle_daemon_spawn
    haggle_daemon_spawn.argtypes = [String]
    haggle_daemon_spawn.restype = c_int

# /usr/local/include/libhaggle/ipc.h: 208
if hasattr(_libs['haggle'], 'haggle_daemon_spawn_with_callback'):
    haggle_daemon_spawn_with_callback = _libs['haggle'].haggle_daemon_spawn_with_callback
    haggle_daemon_spawn_with_callback.argtypes = [String, daemon_spawn_callback_t]
    haggle_daemon_spawn_with_callback.restype = c_int

# /usr/local/include/libhaggle/ipc.h: 219
if hasattr(_libs['haggle'], 'haggle_unregister'):
    haggle_unregister = _libs['haggle'].haggle_unregister
    haggle_unregister.argtypes = [String]
    haggle_unregister.restype = c_int

# /usr/local/include/libhaggle/ipc.h: 226
if hasattr(_libs['haggle'], 'haggle_handle_get_session_id'):
    haggle_handle_get_session_id = _libs['haggle'].haggle_handle_get_session_id
    haggle_handle_get_session_id.argtypes = [haggle_handle_t]
    haggle_handle_get_session_id.restype = c_int

# /usr/local/include/libhaggle/ipc.h: 235
if hasattr(_libs['haggle'], 'haggle_ipc_publish_dataobject'):
    haggle_ipc_publish_dataobject = _libs['haggle'].haggle_ipc_publish_dataobject
    haggle_ipc_publish_dataobject.argtypes = [haggle_handle_t, POINTER(struct_dataobject)]
    haggle_ipc_publish_dataobject.restype = c_int

# /usr/local/include/libhaggle/ipc.h: 246
if hasattr(_libs['haggle'], 'haggle_ipc_register_event_interest'):
    haggle_ipc_register_event_interest = _libs['haggle'].haggle_ipc_register_event_interest
    haggle_ipc_register_event_interest.argtypes = [haggle_handle_t, c_int, haggle_event_handler_t]
    haggle_ipc_register_event_interest.restype = c_int
